💄 style: Apply lighter theme on FOSS principle tags
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/src/components/02_molecules/foss_movement/principle.module.scss
+++ b/src/components/02_molecules/foss_movement/principle.module.scss
@@ -19,5 +19,11 @@
 }
 
 .hashtag {
+  @include pds-text-x-small;
+  display: inline-block;
   margin-bottom: $pds-spacing-fluid-small;
+  padding: 4px 9px;
+  border-radius: $pds-border-radius-small;
+  background-color: $pds-theme-light-background-surface;
+  color: $pds-theme-light-primary;
 }
