Rework TextImage component, add PDS blog assets
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/src/components/02_molecules/author/author.module.scss
+++ b/src/components/02_molecules/author/author.module.scss
@@ -25,6 +25,7 @@
 
     img {
       border-radius: $pds-border-radius-medium;
+      padding: $pds-spacing-static-medium;
       object-fit: contain;
     }
   }
