--- a/src/components/03_organisms/docsSection/docsSection.module.scss
+++ b/src/components/03_organisms/docsSection/docsSection.module.scss
@@ -1,7 +1,26 @@
 @use "@porsche-design-system/components-js/styles" as *;
 
 .section {
-  .feature {
-    grid-column: $pds-grid-basic-column-start / $pds-grid-basic-column-end;
+  display: grid;
+  grid-column: $pds-grid-extended-column-start / $pds-grid-extended-column-end;
+  grid-template-columns: 1fr;
+  grid-gap: $pds-spacing-fluid-x-large;
+
+  @include pds-media-query-min("m") {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  @include pds-media-query-min("l") {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
+.card {
+  padding: $pds-spacing-static-large $pds-spacing-static-medium;
+  background: $pds-theme-dark-background-surface;
+  border-radius: $pds-border-radius-large;
+
+  .link {
+    margin-top: $pds-spacing-static-medium;
   }
 }
