💄 style: Docs section
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/src/components/03_organisms/docsSection/docsSection.module.scss
+++ b/src/components/03_organisms/docsSection/docsSection.module.scss
@@ -20,6 +20,10 @@
   background: $pds-theme-dark-background-surface;
   border-radius: $pds-border-radius-large;
 
+  .description {
+    margin-top: $pds-spacing-static-x-small;
+  }
+
   .link {
     margin-top: $pds-spacing-static-medium;
   }
