Add theme option to MDX content
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/src/app/blog/[...slug]/page.module.scss
+++ b/src/app/blog/[...slug]/page.module.scss
@@ -2,6 +2,10 @@
 
 .descriptionShort {
   grid-column: $pds-grid-narrow-column-start / $pds-grid-narrow-column-end !important;
-  margin-top: $pds-spacing-fluid-x-large;
-  margin-bottom: $pds-spacing-fluid-x-large;
+  margin: $pds-spacing-fluid-x-large 0;
+}
+
+.blog-content {
+  background: $pds-theme-light-background-base;
+  padding: $pds-spacing-fluid-x-large 0;
 }
