--- a/src/components/02_molecules/section/section.module.scss
+++ b/src/components/02_molecules/section/section.module.scss
@@ -1,7 +1,7 @@
 @use "@porsche-design-system/components-js/styles" as *;
 
 .section:first-of-type {
-  margin-top: $pds-spacing-fluid-x-large;
+  margin-top: 0;
 }
 
 .section {
