Adjust spacing for featured blog posts
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/src/components/03_organisms/blogsSection/blogsSection.module.scss
+++ b/src/components/03_organisms/blogsSection/blogsSection.module.scss
@@ -3,5 +3,6 @@
 .section {
   .feature {
     grid-column: $pds-grid-extended-column-start / $pds-grid-extended-column-end;
+    margin-top: $pds-spacing-fluid-large;
   }
 }
