📖: Add contributor story on ORT (#26)
* Add Contributor Story on ORT
* Add more MDX components for ORT story
* Remove double PText component

The PText component is already given
by the respective paragraphs within
the MDX document.

* Remove unwanted paragraph from headline
* Add images for ORT story
* Fix missing OpenGraph description
* Rephrase technical foundation to core service
* Add theme option to MDX content
* Adjust spacing for featured blog posts
* Adjust ratio of second ORT blog image
* Add year to blog post date
* Ignore playwright errors on svg elements for now

This error needs to be fixed upstream in next-image-export-optimizer

---------

Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/src/components/03_organisms/imageText/imageText.module.scss
+++ b/src/components/03_organisms/imageText/imageText.module.scss
@@ -38,6 +38,8 @@
 
     img {
       object-fit: cover;
+      object-position: center;
+      border-radius: $pds-border-radius-large;
     }
   }
 }
