Add POSP repository to list of projects
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/src/components/03_organisms/projectCard/projectCard.module.scss
+++ b/src/components/03_organisms/projectCard/projectCard.module.scss
@@ -12,7 +12,7 @@
     z-index: 2;
 
     img {
-      border-radius: $pds-border-radius-medium $pds-border-radius-medium 0 0;
+      border-radius: $pds-border-radius-medium $pds-border-radius-medium;
       object-fit: contain;
     }
   }
