Finalize PDC blog post
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/src/components/03_organisms/featureCard/featureCard.module.scss
+++ b/src/components/03_organisms/featureCard/featureCard.module.scss
@@ -3,6 +3,7 @@
 .card {
   background: #fff;
   border-radius: $pds-border-radius-medium;
+  overflow: hidden;
 
   @include pds-media-query-min("m") {
     display: grid;
