Add featured blog post to new FlyoutNavigation
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/src/components/02_molecules/header/header.module.scss
+++ b/src/components/02_molecules/header/header.module.scss
@@ -14,11 +14,13 @@
 
   .logo-container {
     grid-column: $pds-grid-narrow-column-start / $pds-grid-narrow-column-end;
+    display: flex;
     place-self: center;
     grid-row: 1;
 
     a {
       display: inline-flex;
+      align-self: start;
     }
 
     p-crest {
@@ -32,5 +34,11 @@
         display: none;
       }
     }
+  }
+
+  .github-container {
+    grid-column: $pds-grid-wide-column-start / $pds-grid-wide-column-end;
+    justify-self: end;
+    grid-row: 1;
   }
 }
