fix: adjust image rendering; fix PDS warnings | mkn

--- a/src/components/02_molecules/footer/footer.module.scss
+++ b/src/components/02_molecules/footer/footer.module.scss
@@ -68,7 +68,7 @@
       margin-top: $pds-spacing-fluid-medium;
       grid-column: $pds-grid-full-column-start / $pds-grid-full-column-end;
 
-      p {
+      p-text {
         padding: $pds-spacing-fluid-x-small 0;
       }
     }
