--- a/src/components/02_molecules/navigation/navigation.module.scss
+++ b/src/components/02_molecules/navigation/navigation.module.scss
@@ -20,3 +20,7 @@
   margin: 0 calc($pds-spacing-fluid-small * -1);
   padding: $pds-spacing-fluid-small;
 }
+
+.navLinkImage {
+  position: relative;
+}
