Restyle navigation menu (#40)
* Use new PFlyoutNavigation component
* Add featured blog post to new FlyoutNavigation
* Hide icon on non-nested menu items
* Remove headline in 2nd-level menu
The headline is shown on mobile devices twice, so avoid duplication.
* fix: adjust image rendering; fix PDS warnings | mkn
* ⬆️ Upgrade depedencies
* Adapt new event type for FlyoutNavigation
* Enable blurry placeholder images
* Update to PDS 3.11.0
* Upgrade other dependencies
* Optimize Flyout and project images
* 🚨 Lint/Prettify
* Set heading as slotted component to ensure accessibility
* Declare YAML type and fix typescript warnings
* 🚨 Fix linter warnings
* Add updated OSS Notice

---------

Co-authored-by: Marcel Knobelsdorf <marcel.knobelsdorf@porsche.digital>
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/src/components/02_molecules/navigation/navigation.module.scss
+++ b/src/components/02_molecules/navigation/navigation.module.scss
@@ -6,7 +6,6 @@
 }
 
 .job-counter {
-  margin-left: $pds-spacing-static-small;
   background-color: $pds-theme-light-background-surface;
   border-radius: 50%;
   text-align: center;
@@ -17,9 +16,11 @@
 }
 
 .navLink {
-  margin: $pds-spacing-fluid-small 0;
+  width: auto;
+  margin: 0 calc($pds-spacing-fluid-small * -1);
+  padding: $pds-spacing-fluid-small;
 }
 
-.docsAccordion {
-  margin: $pds-spacing-fluid-medium 0;
+.navLinkImage {
+  position: relative;
 }
