Fix visual style of Flyout submenu introduced with Next.js 15
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/src/components/02_molecules/navigation/navigation.module.scss
+++ b/src/components/02_molecules/navigation/navigation.module.scss
@@ -21,6 +21,12 @@
   padding: $pds-spacing-fluid-small;
 }
 
+.navSubLink {
+  width: auto;
+  padding-top: $pds-spacing-static-medium;
+}
+
 .navLinkImage {
   position: relative;
+  margin-bottom: $pds-spacing-fluid-medium;
 }
