Use margin instead of padding to avoid misplaced hover effect
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/src/components/02_molecules/navigation/navigation.module.scss
+++ b/src/components/02_molecules/navigation/navigation.module.scss
@@ -23,7 +23,7 @@
 
 .navSubLink {
   width: auto;
-  padding-top: $pds-spacing-static-medium;
+  margin-top: $pds-spacing-static-small;
 }
 
 .navLinkImage {
